<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_settings_remote"
            android:title="@string/tv_remote" />
        <item
            android:id="@+id/nav_rgb"
            android:icon="@drawable/ic_settings_remote"
            android:title="@string/rgb" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </menu>
        </item>
    </group>
</menu>
