<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:id="@+id/listener"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#388E3C">

        <TextView
            android:id="@+id/doorState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="#FFF"
            android:textSize="32dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="#2C3E50">

        <TextView
            android:id="@+id/tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="#FFF"
            android:textSize="32dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/lampToggle"
            android:layout_width="161dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:text="@string/room_lamp"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/relayOpen"
            android:layout_width="161dp"
            android:layout_height="100dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:text="@string/out_lock"
            android:textColor="#FFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/doorOp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:text="@string/door_open"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/doorLo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:text="@string/door_lock"
            android:textColor="#FFF"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>